testsuite/tests/parser/should_fail/NumericUnderscoresFail0.stderr
NumericUnderscoresFail0.hs:8:20: error:
NumericUnderscoresFail0.hs:9:13: error:
NumericUnderscoresFail0.hs:12:14: error:
NumericUnderscoresFail0.hs:14:19: error:
NumericUnderscoresFail0.hs:15:15: error:
NumericUnderscoresFail0.hs:18:14: error: Variable not in scope: e_
NumericUnderscoresFail0.hs:19:18: error:
NumericUnderscoresFail0.hs:20:14: error: Variable not in scope: e
NumericUnderscoresFail0.hs:20:16: error:
